--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -164,7 +164,7 @@ ViewDetailsScreen As screen:
                 DefaultMode: =FormMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: ='Contract NumberVDS'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+'CustomerName _DataCard2'.Height+'CustomerName _DataCard2'.Height+20
+                Height: =ContractNumberVDS.Height+'Building NameVDS'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+'CustomerName _DataCard2'.Height+'CustomerName _DataCard2'.Height+20
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
@@ -173,7 +173,7 @@ ViewDetailsScreen As screen:
                 Y: =10
                 ZIndex: =1
 
-                "'Contract NumberVDS' As typedDataCard.textualEditCard":
+                ContractNumberVDS As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="crd59_contractnumber"
@@ -185,7 +185,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_contractnumber")
                     Required: =false
                     Update: =IntxtContractNumberVDS.Text
-                    Width: =738
+                    Width: =Parent.Width
                     X: =0
                     Y: =0
                     ZIndex: =1
@@ -257,93 +257,6 @@ ViewDetailsScreen As screen:
                         Width: =30
                         Wrap: =false
                         Y: =lblContractNumberVDS.Y
-                        ZIndex: =4
-
-                "'Building Name_DataCard2_3' As typedDataCard.textualEditCard":
-                    BorderColor: =RGBA(0, 0, 0, 1)
-                    BorderStyle: =BorderStyle.Solid
-                    DataField: ="crd59_name"
-                    Default: =ThisItem.'LeadInformation '
-                    DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_buildingname")
-                    Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
-                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
-                    Required: =false
-                    Update: =DataCardValue33_3.Text
-                    Width: =738
-                    X: =0
-                    Y: =1
-                    ZIndex: =1
-
-                    DataCardKey34_3 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        Font: =Font.Arial
-                        FontWeight: =FontWeight.Semibold
-                        Height: =48
-                        Size: |-
-                            =//18
-                            If(Parent.Width<378,12,Parent.Width<500,14,16)
-                        Text: |-
-                            =//Parent.DisplayName
-                            "Building name"
-                        Width: =Parent.Width - 60
-                        Wrap: =false
-                        X: =30
-                        Y: =10
-                        ZIndex: =1
-
-                    DataCardValue33_3 As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: |-
-                            =//Parent.Default
-                            //Gallery1.Selected.BuildingName
-                            ThisItem.'BuildingName '
-                        DelayOutput: =true
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        HoverBorderColor: =RGBA(0, 0, 0, 1)
-                        HoverFill: =RGBA(0, 0, 0, 0)
-                        MaxLength: =Parent.MaxLength
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Size: |-
-                            =//18
-                            If(Parent.Width<378,12,Parent.Width<500,14,16)
-                        Tooltip: =Parent.DisplayName
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardKey34_3.Y + DataCardKey34_3.Height 
-                        ZIndex: =2
-
-                    ErrorMessage34_3 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue33_3.Y + DataCardValue33_3.Height
-                        ZIndex: =3
-
-                    StarVisible34_3 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey34_3.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =DataCardKey34_3.Y
                         ZIndex: =4
 
                 PinCode_DataCard2_3 As typedDataCard.textualEditCard:
@@ -1496,6 +1409,93 @@ ViewDetailsScreen As screen:
                         Width: =30
                         Wrap: =false
                         Y: =DataCardKey4.Y
+                        ZIndex: =4
+
+                "'Building NameVDS' As typedDataCard.textualEditCard":
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DataField: ="crd59_name"
+                    Default: =ThisItem.'LeadInformation '
+                    DisplayMode: =Parent.DisplayMode
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_buildingname")
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =50
+                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
+                    Required: =false
+                    Update: =DataCardValue33_3.Text
+                    Width: =738
+                    X: =0
+                    Y: =1
+                    ZIndex: =1
+
+                    DataCardKey34_3 As label:
+                        Color: =RGBA(0, 0, 0, 1)
+                        Font: =Font.Arial
+                        FontWeight: =FontWeight.Semibold
+                        Height: =48
+                        Size: |-
+                            =//18
+                            If(Parent.Width<378,12,Parent.Width<500,14,16)
+                        Text: |-
+                            =//Parent.DisplayName
+                            "Building name"
+                        Width: =Parent.Width - 60
+                        Wrap: =false
+                        X: =30
+                        Y: =10
+                        ZIndex: =1
+
+                    DataCardValue33_3 As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: |-
+                            =//Parent.Default
+                            //Gallery1.Selected.BuildingName
+                            ThisItem.'BuildingName '
+                        DelayOutput: =true
+                        DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
+                        HoverBorderColor: =RGBA(0, 0, 0, 1)
+                        HoverFill: =RGBA(0, 0, 0, 0)
+                        MaxLength: =Parent.MaxLength
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Size: |-
+                            =//18
+                            If(Parent.Width<378,12,Parent.Width<500,14,16)
+                        Tooltip: =Parent.DisplayName
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =DataCardKey34_3.Y + DataCardKey34_3.Height 
+                        ZIndex: =2
+
+                    ErrorMessage34_3 As label:
+                        AutoHeight: =true
+                        Height: =10
+                        Live: =Live.Assertive
+                        PaddingBottom: =0
+                        PaddingLeft: =0
+                        PaddingRight: =0
+                        PaddingTop: =0
+                        Size: =24
+                        Text: =Parent.Error
+                        Visible: =Parent.DisplayMode=DisplayMode.Edit
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =DataCardValue33_3.Y + DataCardValue33_3.Height
+                        ZIndex: =3
+
+                    StarVisible34_3 As label:
+                        Align: =Align.Center
+                        Height: =DataCardKey34_3.Height
+                        Size: =21
+                        Text: ="*"
+                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                        Width: =30
+                        Wrap: =false
+                        Y: =DataCardKey34_3.Y
                         ZIndex: =4
 
             Label4 As label:
